# openbot

./: .gitignore  Cargo.toml  README.md  SECURTY_AUDIT.md  openbot.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONFIG_REFERENCE.md  MEMORY_FORMAT.md  SKILLS_REFERENCE.md  USER_GUIDE.md
examples/: config.md
skills/: code-review.md  refactor.md
src/: config.rs  git.rs  history.rs  main.rs  memory.rs  prompt.rs  registry.rs  runner.rs  skills.rs  tui.rs  workspace.rs
