[package]
# Crate metadata used by Cargo for builds and publishing.
name = "openbot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Codex runtime crates.
codex-core = { git = "https://github.com/openai/codex" }
codex-protocol = { git = "https://github.com/openai/codex" }
codex-config = { git = "https://github.com/openai/codex" }
codex-utils-absolute-path = { git = "https://github.com/openai/codex" }

# Async runtime and CLI parsing.
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

# Serialization/config formats.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling and time.
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# Logging and filtering.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Skip LTO to keep release builds from taking forever.
[profile.release]
lto = false

# Keep websocket crates aligned with the Codex workspace to avoid runtime
# incompatibilities between protocol/client layers.
[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

# Some transitive dependencies may request the SSH remote form directly; patch
# it too so resolution stays deterministic.
[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
